--- a/AccountManagers.Presentation/App.config
+++ b/AccountManagers.Presentation/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<!--<add name="DbConn" connectionString="Server=192.168.2.9\dev;Database=SmartFinanceDB;Trusted_Connection=True;" providerName="System.Data.SqlClient" />-->
+
+		<add name="DbConn" connectionString="Server=localhost\SQLEXPRESS;Database=AccountManagers;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
