--- a/AccountManagers.Model/AccountManagers.Model.csproj
+++ b/AccountManagers.Model/AccountManagers.Model.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2AB61414-6713-4671-85ED-31E7C8BC533B}</ProjectGuid>
+    <ProjectGuid>{4B16BCED-F8E6-4B3C-890A-1908AAA6CEC1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AccountManagers.Common</RootNamespace>
-    <AssemblyName>AccountManagers.Common</AssemblyName>
+    <RootNamespace>AccountManagers.Model</RootNamespace>
+    <AssemblyName>AccountManagers.Model</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,7 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,17 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="Utils\EmailValidator.cs" />
-    <Compile Include="Utils\IEmailValidator.cs" />
-    <Compile Include="Utils\IUserOutput.cs" />
-    <Compile Include="Utils\UsersCSVWriter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AccountManagers.Model\AccountManagers.Model.csproj">
-      <Project>{4B16BCED-F8E6-4B3C-890A-1908AAA6CEC1}</Project>
-      <Name>AccountManagers.Model</Name>
-    </ProjectReference>
+    <Compile Include="User\User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
